Fri Mar 20 16:04:58 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_module.cpp(fe_add_interface_fwd):
        
          Fixed logic in setting the 'full_definition' member of
          a forward declared interface node, and other changes to
          make sure the memory management is still handled correctly.
          Thanks to Maxim Khon<mkhon@parallels.com> for reporting
          the problem of a derived inteface's operation table not
          containing base class operations, when a forward declaration
          of the base class interface occurs between the two
          full definitions,

Fri Mar 20 10:01:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ZIOP/ZIOP_ORBInitializer.cpp:
        * tao/ZIOP/ZIOP_Service_Context_Handler.cpp:
        * tao/ZIOP/ZIOP_Service_Context_Handler.h:
          Don't compile when we have no messaging

Fri Mar 20 07:01:18 UTC 2009  Olli Savia  <ops@iki.fi>

        * tests/Xt_Stopwatch/timer.h:
        * tests/Xt_Stopwatch/timer.cpp:
          Added virtual destructor to fix compile warning.

Fri Mar 20 01:54:00 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/Notify/Validate_Client/Makefile.am:

          Fix for automake builds.

Thu Mar 19 18:34:18 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>

        * NEWS:
        * orbsvcs/Notify_Service/README:

          Add text to describe the new validate_client functionality.

        * orbsvcs/tests/Notify/Validate_Client/run_test.pl:

          clean up all the intermediate files at the end of the test.

Thu Mar 19 15:16:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/MProfile.cpp:
          Const change

        * tao/Profile.cpp:
          Layout change

        * tao/ZIOP/ZIOP_ORBInitializer.cpp:
        * tao/ZIOP/ZIOP_Service_Context_Handler.cpp:
        * tao/ZIOP/ZIOP_Service_Context_Handler.h:
          Added a ZIOP sc handler that transfers the ZIOP enabled and